font size and margin now correct on mobile devices too

--- a/Res/CSS/common.css
+++ b/Res/CSS/common.css
@@ -1,11 +1,12 @@
 :root {
     --bg: #1d1d1dff;
     --margin: 1rem;
+    --margin: max(1.5rem, 1.5vh);
 }
 
 body {
     background: var(--bg);
     font-family: var(--font-family);
-    font-size: 1.5rem;
+    font-size: max(2.0vh, 1.5rem);
     color: var(--font-color);
 }
